# textual-zptess

./: .gitignore  README.md  pyproject.toml
scripts/: anew
src/zptess/: __init__.py  _version.py  controller.py  loader.py  main.py  ring.py
src/zptess/dbase/: browser.py  checker.py  extract.py  fix.py  loader.py  model.py  qa.py  schema.py
src/zptess/photometer/: __init__.py  aserial.py  info.py  readings.py  service.py  tessw.py  test.py
src/zptess/photometer/protocol/: payload.py  photinfo.py  tessw.py  transport.py
src/zptess/tui/: application.py  calibration.py  controller.py  export.py  main.py
src/zptess/tui/css/: zptess.tcss
src/zptess/tui/resources/css/: calibrate.tcss  mytextualapp.tcss  zptess.tcss
src/zptess/tui/view/: application.py  calibration.py  configure.py  export.py
src/zptess/tui/view/resources/: __init__.py
src/zptess/tui/view/resources/about/: description.md
src/zptess/tui/view/resources/css/: mytextualapp.tcss
src/zptess/utils/: argsparse.py  logging.py  misc.py
